# ex.nss.lib

./: AUTHORS  Makefile.am  README  config.h.in  configure.ac  convert-ston.c  convert-strtono.c  default.h  exclusion.git  group.c  main-group.c  main-group.mk  main-passwd.c  main-passwd.mk  main.c  passwd.c  read_output.c  shadow.c  tool.c  tool.h
Compilation/: COPYING  ChangeLog  Makefile.am  NEWS  README  config.h.in  configuration.ac  configure.ac  main.mk.am
Configuration/: handler.php
Documentation/User/: Configuration.txt  Description (Short).txt  Description.txt  Installation.txt
Source/: default.h  tool.c  tool.h
Source/nss/: group.c  passwd.c  shadow.c
Test/: main-group.c  main-group.do  main-group.mk  main-passwd.c  main-passwd.mk
Test/xml/: parse3.c  parser-custom.c
cfg/: group.xml  handler  handler.php  system.db
conf/: passwd.sql
doc/usage/: author.txt  installation.txt  uninstallation.txt
src/: main.h  nss.exo.h  tool.c  tool.h
src/nss/: group.c  group.tool.c  group.tool.h  passwd.c  passwd.tool.c  passwd.tool.h  shadow.c  shadow.tool.c  shadow.tool.h
struct.site/: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  config.h.in  configure.ac
xml/: user.xml  xpath1.c
