lib_LTLIBRARIES = libnss_exo.la
libnss_exo_la_SOURCES = ../src/tool.c ../src/nss/passwd.c ../src/nss/group.c ../src/nss/shadow.c ../src/nss/passwd.tool.c ../src/nss/group.tool.c ../src/nss/shadow.tool.c
libnss_exo_la_LDFLAGS = -version-info 2:0:0
EXTRA_DIST = ../src/nss.exo.h ../src/tool.h ../src/nss/passwd.tool.h ../src/nss/group.tool.h ../src/nss/shadow.tool.h
ACLOCAL_AMFLAGS = -I m4 subdir-objects
